# PoseEdit

./: .gitignore  .gitmodules  CODING_CONVENTIONS.md  LICENSE  README.md  design.md  impl_architecture.md  pyproject.toml
.reuse/: dep5
doc/: blender_best_practices.md  data_model.md  person_stitch_optimization.md  triangulation_design.md
src/: blender_asset.toml
src/pose_editor/: __init__.py
src/pose_editor/blender/: __init__.py  dal.py  dal3d.py  drivers.py  operators.py  properties.py  scene_builder.py
src/pose_editor/core/: __init__.py  calibration.py  camera_view.py  frame_handler.py  marker_data.py  person_3d_view.py  person_data_series.py  person_data_view.py  person_facade.py  skeleton.py  triangulation.py
src/pose_editor/pose2sim/: skeletons.py  triangulate_point.py  triangulation.py
src/pose_editor/ui/: panels.py
tests/: test_dal.py  test_drivers.py  test_install.py  test_operators.py  test_operators_mocked.py  test_scene_builder.py  test_scene_builder_mocked.py
tests/blender_integration/: test_dal3d.py  test_dal_keyframes.py  test_marker_data_connection.py
tests/core/: test_calibration.py  test_camera_view.py  test_frame_handler.py  test_marker_data.py  test_person_3d_view.py  test_person_data_view.py  test_person_data_view_optimization.py  test_person_facade.py  test_skeleton.py  test_triangulation.py
